--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:name=".controller.KeyanApplication"
+        android:name=".KeyanApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,7 +20,7 @@
         tools:ignore="GoogleAppIndexingWarning">
 
         <activity
-            android:name=".DashboardActivity"
+            android:name=".controller.view.DashboardActivity"
             android:launchMode="singleTask">
 
             <intent-filter>
@@ -34,13 +34,20 @@
 
         <!--TODO: fix WARNING-->
         <service
-            android:name=".notification.keyoperation.KeyOperatableNotificationService"
-            android:directBootAware="true"
+            android:name=".controller.service.NotificationService"
             android:exported="false" />
 
         <!--TODO: fix WARNING-->
         <receiver
-            android:name=".notification.keyoperation.KeyOperatableNotificationReceiver"
+            android:name=".controller.receiver.NotificationActionReceiver"
+            android:enabled="true"
+            android:exported="false">
+
+        </receiver>
+
+        <!--TODO: fix WARNING-->
+        <receiver
+            android:name=".controller.receiver.AndroidActionReceiver"
             android:directBootAware="true"
             android:enabled="true"
             android:exported="false">
@@ -48,6 +55,9 @@
             <intent-filter>
                 <!-- 端末起動時のインテント -->
                 <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
+                <action android:name="android.intent.action.USER_PRESENT" />
+                <action android:name="android.intent.action.USER_UNLOCKED" />
+
             </intent-filter>
 
         </receiver>
