--- a/build.gradle
+++ b/build.gradle
@@ -2,21 +2,24 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.coroutines_version = '1.3.3'
+    ext.koin_version = "2.0.1"
+    ext.room_version = "2.2.4"
+
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
         // for Crashlytics
         classpath 'com.google.gms:google-services:4.3.3'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0-beta02'
-
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.1.0'
     }
 }
 
